# aWorkingSource

./: .gitignore  CNAME  README.md
LightChaserAnim/code_sources/katana2.5_source/plugins/Ops/SubdividedSpace/: CMakeLists.txt
LightChaserAnim/code_sources/katana2.5_source/plugins/ViewerModifiers/LightFilterViewerModifier/: CMakeLists.txt
LightChaserAnim/code_sources/katana2.5_source/plugins/ViewerModifiers/SphereRender/: CMakeLists.txt
LightChaserAnim/katana_develop/source/Ops/AttributeFile_In/: CMakeLists.txt
LightChaserAnim/katana_develop/source/Ops/AttributeSet/: CMakeLists.txt
LightChaserAnim/katana_develop/source/Ops/StaticSceneCreate/: CMakeLists.txt
LightChaserAnim/katana_develop/source/RenderOutputLocations/LocalLocation/: CMakeLists.txt
LightChaserAnim/katana_develop/source/ViewerModifiers/: CMakeLists.txt
LightChaserAnim/katana_develop/source/ViewerModifiers/SphereRender/src/: SphereRender.cpp
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/AlembicIn/: CMakeLists.txt
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/AttributeCopy/: CMakeLists.txt
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/GeoScaler/: CMakeLists.txt
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/Messer/: CMakeLists.txt
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/SkinEnvelope/: CMakeLists.txt
LightChaserAnim/katana_plugins/code_sources/katana2.5_source/plugins/Ops/SphereMakerMaker/: CMakeLists.txt  RegisterSphereMakerMakerNode.py
LightChaserAnim/ktn_lightShape2.0/LightViewerModifier/: CMakeLists.txt
LightChaserAnim/learning/Makefile_KTN3/SphereMaker/: CMakeLists.txt  Makefile
LightChaserAnim/learning/Makefile_KTN3/SphereMaker/src/: op.cpp
LightChaserAnim/learning/katana2.5_develop/source/Asset/FileAsset/: CMakeLists.txt
LightChaserAnim/learning/katana2.5_develop/source/Templates/src/: CMakeLists.txt
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/: CMakeLists.txt  build_script.sh
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/BallLocationType/python/: BallViewerPluginExtension.py
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/GenericPlugins/python/: EventTranslators.py  __init__.py
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/Shaders/: basic.vert  picker.frag
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/Shaders/GenericViewerPlugins/: camera_gate.geom  color_alpha_solid.frag  n_dot_eyes.frag  normal_diffuse_specular.frag  normal_diffuse_specular.vert
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/include/: FnDrawable.h  FnGLTransformManipulator.h  FnManipulatorsConfig.h  FnMeshGeneration.h
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/include/coi/: FnGLCoiManipulator.h
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/include/rotate/: FnGLRotateAxisHandle.h  FnGLRotateBallHandle.h
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/include/scale/: FnGLScaleManipulator.h  FnGLScalePlaneHandle.h
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/include/translate/: FnGLTranslateManipulator.h  FnGLTranslatePlaneHandle.h
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/src/rotate/: FnGLRotateAxisHandle.cpp  FnGLRotateBallHandle.cpp
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/src/scale/: FnGLScalePlaneHandle.cpp
LightChaserAnim/learning/katana3.0_develop/ViewerPlugins/TransformManipulators/src/translate/: FnGLTranslateAxisHandle.cpp  FnGLTranslatePlaneHandle.cpp  FnGLTranslateScreenPlaneHandle.cpp
LightChaserAnim/learning/katana_develop/source/Asset/: CMakeLists.txt
LightChaserAnim/learning/katana_develop/source/ViewerModifiers/CameraViewerModifier/: CMakeLists.txt
LightChaserAnim/test/katana_develop/source/RenderOutputLocations/FileLocation/: CMakeLists.txt
LightChaserAnim/test/katana_develop/source/Templates/src/Render/: CMakeLists.txt
LightChaserAnim/test/katana_develop/source/ViewerModifiers/VolumeViewerModifier/: CMakeLists.txt
LightChaserAnim/testing/katana2.5_develop/source/ViewerModifiers/BatchViewerModifier/: CMakeLists.txt
LightChaserAnim/testing/katana2.5_develop/source/ViewerModifiers/BatchViewerModifier/src/: BatchViewerModifier.cpp
LightChaserAnim/testing/katana3.0_develop/Ops_SphereMaker/: CMakeLists.txt  build_script.sh
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/: CMakeLists.txt  README.md  build_script.sh
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/: CMakeLists.txt
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/include/: DrawableMesh.h  ExampleViewerDelegate.h  SceneNode.h
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/include/layers/: ExampleSceneLayer.h
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/python/: ManipulatorMenu.py
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/src/: SceneNode.cpp
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/SSLighting/src/components/: LoggingComponent.cpp
LightChaserAnim/testing/katana3.0_develop/ScreenSpaceLighting/Tabs/: separatorTitle.txt
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/BallLocationType/: CMakeLists.txt  README
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/BallLocationType/include/: BallLocationType.h
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/BallLocationType/src/: BallLocationType.cpp
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/TransformManipulators/: CMakeLists.txt
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/TransformManipulators/include/coi/: FnGLCoiHandle.h
LightChaserAnim/testing/katana3.0_develop/ViewerPlugins/TransformManipulators/src/: FnGLTransformManipulator.cpp  FnMeshGeneration.cpp  Main.cpp
MiliPictures/: README
(+1856 files in other folders)
